--- a/index.html
+++ b/index.html
@@ -6,19 +6,42 @@
     <link rel="stylesheet" href="dist/output.css" />
     <title>Calculadora de VT</title>
   </head>
-  <body>
-    <div>
-      <h1>Calculadora de Vale Transporte</h1>
+  <body class="flex items-center justify-center h-full text-xl text-gray-900">
+    <div
+      class="w-full p-6 bg-white border border-gray-200 rounded-lg shadow sm:w-1/4 dark:bg-gray-800 dark:border-gray-700"
+    >
+      <h1 class="text-2xl">Calculadora de Vale Transporte</h1>
       <div>
-        <form id="submitForm">
-          <label for="salario">Salário bruto:</label>
-          <input type="number" name="salario" id="salario" step="0.01" />
-          <label for="vtDia">Valor por dia:</label>
-          <input type="number" name="vtDia" id="vtDia" step="0.01" />
-          <button id="calcBtn">Calcular</button>
+        <form id="submitForm" class="flex flex-col">
+          <label for="salario" class="block mb-2 dark:text-white"
+            >Salário bruto:</label
+          >
+          <input
+            type="number"
+            id="salario"
+            class="w-28 bg-gray-50 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            step="0.01"
+            required
+          />
+          <label for="salario" class="block mb-2 dark:text-white"
+            >VT diário:</label
+          >
+          <input
+            type="number"
+            id="vtDia"
+            class="w-28 bg-gray-50 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 mb-4"
+            step="0.01"
+            required
+          />
+          <button
+            id="calcBtn"
+            class="w-32 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700 self-center"
+          >
+            Calcular
+          </button>
         </form>
         <div>
-          <h2 id="resultado">Resultado</h2>
+          <h2 class="text-2xl">Resultado</h2>
           <p>Custo total do VT: <span id="vtTotal"></span></p>
           <p>Você paga: <span id="descUser"></span></p>
           <p>Sua empresa completa o valor com: <span id="vtEmpresa"></span></p>
